--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -2,6 +2,9 @@ a:hover, a:visited, a:link, a:active {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.65);;
 }
+.requiredSingle {
+  color: #ff3860;
+}
 /* --------------按钮-------------- */
 .btn{
     width: 6rem;
@@ -497,3 +500,94 @@ a:hover, a:visited, a:link, a:active {
 .help.is-danger {
   color: #ff3860
 }
+@media screen and (max-width:768px){.control-label{margin-bottom:5px}
+
+}
+
+@media screen and (min-width:769px){.control-label{-ms-flex-preferred-size:0;flex-basis:0;-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:0;flex-shrink:0;margin-right:20px;padding-top:7px;text-align:right}
+
+}
+
+.control{position:relative;text-align:left}
+
+.control:not(:last-child){margin-bottom:10px}
+
+.control.has-addons{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start}
+
+.control.has-addons .button,.control.has-addons .input,.control.has-addons .select{border-radius:0;margin-right:-1px;width:auto}
+
+.control.has-addons .button:hover,.control.has-addons .input:hover,.control.has-addons .select:hover{z-index:2}
+
+.control.has-addons .button:active,.control.has-addons .button:focus,.control.has-addons .input:active,.control.has-addons .input:focus,.control.has-addons .select:active,.control.has-addons .select:focus{z-index:3}
+
+.control.has-addons .button:first-child,.control.has-addons .button:first-child select,.control.has-addons .input:first-child,.control.has-addons .input:first-child select,.control.has-addons .select:first-child,.control.has-addons .select:first-child select{border-radius:3px 0 0 3px}
+
+.control.has-addons .button:last-child,.control.has-addons .button:last-child select,.control.has-addons .input:last-child,.control.has-addons .input:last-child select,.control.has-addons .select:last-child,.control.has-addons .select:last-child select{border-radius:0 3px 3px 0}
+
+.control.has-addons .button.is-expanded,.control.has-addons .input.is-expanded,.control.has-addons .select.is-expanded{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:0;flex-shrink:0}
+
+.control.has-addons.has-addons-centered{-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}
+
+.control.has-addons.has-addons-right{-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end}
+
+.control.has-addons.has-addons-fullwidth .button,.control.has-addons.has-addons-fullwidth .input,.control.has-addons.has-addons-fullwidth .select{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:0;flex-shrink:0}
+
+.control.has-icon>.fa{display:inline-block;font-size:14px;height:24px;line-height:24px;text-align:center;vertical-align:top;width:24px;color:#dbdbdb;pointer-events:none;position:absolute;top:4px;z-index:4}
+
+.control.has-icon .input:focus+.fa{color:#b5b5b5}
+
+.control.has-icon .input.is-small+.fa{font-size:10.5px;top:0}
+
+.control.has-icon .input.is-medium+.fa{font-size:21px;top:8px}
+
+.control.has-icon .input.is-large+.fa{font-size:21px;top:12px}
+
+.control.has-icon:not(.has-icon-right)>.fa{left:4px}
+
+.control.has-icon:not(.has-icon-right) .input{padding-left:32px}
+
+.control.has-icon:not(.has-icon-right) .input.is-small{padding-left:24px}
+
+.control.has-icon:not(.has-icon-right) .input.is-small+.fa{left:0}
+
+.control.has-icon:not(.has-icon-right) .input.is-medium{padding-left:40px}
+
+.control.has-icon:not(.has-icon-right) .input.is-medium+.fa{left:8px}
+
+.control.has-icon:not(.has-icon-right) .input.is-large{padding-left:48px}
+
+.control.has-icon:not(.has-icon-right) .input.is-large+.fa{left:12px}
+
+.control.has-icon.has-icon-right>.fa{right:4px}
+
+.control.has-icon.has-icon-right .input{padding-right:32px}
+
+.control.has-icon.has-icon-right .input.is-small{padding-right:24px}
+
+.control.has-icon.has-icon-right .input.is-small+.fa{right:0}
+
+.control.has-icon.has-icon-right .input.is-medium{padding-right:40px}
+
+.control.has-icon.has-icon-right .input.is-medium+.fa{right:8px}
+
+.control.has-icon.has-icon-right .input.is-large{padding-right:48px}
+
+.control.has-icon.has-icon-right .input.is-large+.fa{right:12px}
+
+.control.is-grouped{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:start;-ms-flex-pack:start;justify-content:flex-start}
+
+.control.is-grouped>.control:not(:last-child){margin-bottom:0;margin-right:10px}
+
+.control.is-grouped>.control.is-expanded{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:0;flex-shrink:0}
+
+.control.is-grouped.is-grouped-centered{-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}
+
+.control.is-grouped.is-grouped-right{-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end}
+
+@media screen and (min-width:769px){.control.is-horizontal,.control.is-horizontal>.control{display:-webkit-box;display:-ms-flexbox;display:flex}
+
+.control.is-horizontal>.control{-ms-flex-preferred-size:0;flex-basis:0;-webkit-box-flex:5;-ms-flex-positive:5;flex-grow:5;-ms-flex-negative:1;flex-shrink:1}
+
+}
+
+.control.is-loading:after{-webkit-animation:spin-around .5s infinite linear;animation:spin-around .5s infinite linear;border:2px solid #dbdbdb;border-radius:290486px;border-right-color:transparent;border-top-color:transparent;content:"";display:block;height:16px;position:relative;width:16px;position:absolute!important;right:8px;top:8px}
