--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,10 +1,3 @@
-a:hover, a:visited, a:link, a:active {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.65);;
-}
-.requiredSingle {
-  color: #ff3860;
-}
 /* --------------按钮-------------- */
 .btn{
     width: 6rem;
@@ -60,10 +53,7 @@ a:hover, a:visited, a:link, a:active {
   background-color: #fff;
   border: 1px solid #dbdbdb;
   border-radius: 0.064rem;
-  color: #363636;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  color: #363636; 
   font-size: 0.6rem;
   height: 1.68rem;
   -webkit-box-pack: start;
@@ -75,10 +65,20 @@ a:hover, a:visited, a:link, a:active {
   position: relative;
   vertical-align: top;
   box-shadow: inset 0 1px 0.04rem hsla(0, 0%, 4%, .1);
+}
+
+.textarea {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   max-width: 100%;
   width: 100%;
 }
 
+.input {
+  display: inline-block;
+  width: 100%;
+}
 .input:hover,
 .textarea:hover {
   border-color: #b5b5b5
@@ -451,8 +451,8 @@ a:hover, a:visited, a:link, a:active {
 
 .label {
   color: #363636;
-  display: block;
-  font-weight: 700
+  display: flex;
+  font-weight: 700;
 }
 
 .label:not(:last-child) {
@@ -461,8 +461,8 @@ a:hover, a:visited, a:link, a:active {
 
 .help {
   display: block;
-  font-size: 0.4rem;
-  margin-top: 0.1rem;
+  font-size: 0.6rem;
+  margin-top: 0.3rem;
 }
 
 .help.is-white {
@@ -500,13 +500,6 @@ a:hover, a:visited, a:link, a:active {
 .help.is-danger {
   color: #ff3860
 }
-@media screen and (max-width:768px){.control-label{margin-bottom:5px}
-
-}
-
-@media screen and (min-width:769px){.control-label{-ms-flex-preferred-size:0;flex-basis:0;-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:0;flex-shrink:0;margin-right:20px;padding-top:7px;text-align:right}
-
-}
 
 .control{position:relative;text-align:left}
 
@@ -532,7 +525,7 @@ a:hover, a:visited, a:link, a:active {
 
 .control.has-addons.has-addons-fullwidth .button,.control.has-addons.has-addons-fullwidth .input,.control.has-addons.has-addons-fullwidth .select{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:0;flex-shrink:0}
 
-.control.has-icon>.fa{display:inline-block;font-size:14px;height:24px;line-height:24px;text-align:center;vertical-align:top;width:24px;color:#dbdbdb;pointer-events:none;position:absolute;top:4px;z-index:4}
+.control.has-icon>.fa{display:inline-block;font-size:0.6rem;height:0.5rem;line-height:0.5rem;text-align:center;vertical-align:top;width:0.5rem;color:#dbdbdb;pointer-events:none;position:absolute;top:0.6rem;z-index:4}
 
 .control.has-icon .input:focus+.fa{color:#b5b5b5}
 
@@ -542,11 +535,11 @@ a:hover, a:visited, a:link, a:active {
 
 .control.has-icon .input.is-large+.fa{font-size:21px;top:12px}
 
-.control.has-icon:not(.has-icon-right)>.fa{left:4px}
+.control.has-icon:not(.has-icon-right)>.fa{left:2px}
 
 .control.has-icon:not(.has-icon-right) .input{padding-left:32px}
 
-.control.has-icon:not(.has-icon-right) .input.is-small{padding-left:24px}
+.control.has-icon:not(.has-icon-right) .input.is-small{padding-left:0.5rem}
 
 .control.has-icon:not(.has-icon-right) .input.is-small+.fa{left:0}
 
@@ -558,11 +551,11 @@ a:hover, a:visited, a:link, a:active {
 
 .control.has-icon:not(.has-icon-right) .input.is-large+.fa{left:12px}
 
-.control.has-icon.has-icon-right>.fa{right:4px}
+.control.has-icon.has-icon-right>.fa{right:2px}
 
 .control.has-icon.has-icon-right .input{padding-right:32px}
 
-.control.has-icon.has-icon-right .input.is-small{padding-right:24px}
+.control.has-icon.has-icon-right .input.is-small{padding-right:0.5rem}
 
 .control.has-icon.has-icon-right .input.is-small+.fa{right:0}
 
@@ -584,10 +577,6 @@ a:hover, a:visited, a:link, a:active {
 
 .control.is-grouped.is-grouped-right{-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end}
 
-@media screen and (min-width:769px){.control.is-horizontal,.control.is-horizontal>.control{display:-webkit-box;display:-ms-flexbox;display:flex}
-
 .control.is-horizontal>.control{-ms-flex-preferred-size:0;flex-basis:0;-webkit-box-flex:5;-ms-flex-positive:5;flex-grow:5;-ms-flex-negative:1;flex-shrink:1}
-
-}
 
 .control.is-loading:after{-webkit-animation:spin-around .5s infinite linear;animation:spin-around .5s infinite linear;border:2px solid #dbdbdb;border-radius:290486px;border-right-color:transparent;border-top-color:transparent;content:"";display:block;height:16px;position:relative;width:16px;position:absolute!important;right:8px;top:8px}
