--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,3 +9,14 @@ a:hover, a:visited, a:link, a:active {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.65);;
 }
+.requiredSymbol {
+  color: #ff3860;
+}
+
+.bottomBtn {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 3rem;
+  margin: 0 auto;
+}
