--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@ html, body, #app {
   width: 100%;
   padding: 0;
   margin: 0;
+  font-size: 0.6rem;
 }
 a:hover, a:visited, a:link, a:active {
     text-decoration: none;
@@ -19,4 +20,9 @@ a:hover, a:visited, a:link, a:active {
   right: 0;
   bottom: 3rem;
   margin: 0 auto;
+}
+input,
+select,
+textarea {
+  outline: 0;
 }
